<resources>
    <string name="app_name">NomadNest</string>


    <string name="nomad">
        NomadNest
    </string>

    <string name="slogan">
        Explore the world
    </string>

    <string name="getStarted">
        Let\u0027s Get Started
    </string>
    <string name="createyouraccount">
        Create Your Account
    </string>

    <string name="welcome_to_">
        Welcome to your journey! We\'re thrilled to have you here.
    </string>


    <string name="text_button_google">
        Continue with Google
    </string>

    <string name="text_button_facebook">
        Continue with Facebook
    </string>

    <string name="text_button_apple">
        Continue with Apple
    </string>

    <string name="text_button_login">
        Login
    </string>


    <string name="please_fill">
        Please fill in your details to create your account and enjoy our services.
    </string>
    <string name="sign_up">
        Sign Up
    </string>
    <string name="already">
        Already have an account?
    </string>

    <string name="title_name">
        Full Name
    </string>
    <string name="title_email">
        Email
    </string>

    <string name="title_password">
        Password
    </string>


    <string name="personal_info_title">
        Personal Info
    </string>

    <string name="save">Save</string>


    <string name="all_your_tr">
        All your trips in one place
    </string>


    <string name="press_start">
        Press start to add your trip
    </string>
    <string name="plan">
        Plan Trips
    </string>


    <string name="full_name">
        Full Name
    </string>


    <string name="user_gmail">
        user@gmail.com
    </string>

    <string name="pinfo">
        Personal Info
    </string>

    <string name="logout">
        Logout
    </string>

    <string name="help">
        Help And Support
    </string>

    <string name="security">
        Account and Security
    </string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="log_in_to_your_account">Log In To Your Account</string>
    <string name="welcome_back_login">Welcome back! Please log in to your account \n to continue where you left off.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="stay">Stay Logged In</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="getstrtedwithplan">
        Let\'s get started by selecting where are you going.
    </string>
    <string name="search">Search</string>
    <string name="select_from_best_location_in_2024">Select From Best Location in 2024!</string>
    <string name="when_adventure_title">When Will your Adventure Begin And End?</string>


    <string name="chooseDate">
        Choose the dates for your trip. This helps us plan the perfect itinerary for your travel period.
    </string>


    <string name="set_your_trip_budget">
        Set your trip budget
    </string>

    <string name="know_preference">
        Let us know your budget preference, and we\'ll craft an itinerary that suits your financial comfort.
    </string>

    <string name="cheapsub">
        Budget-friendly, economical travel.
    </string>
    <string name="cheap">
        Cheap
    </string>

    <string name="economicsub">
        Moderate Spending for a balanced trip.
    </string>
    <string name="economic">
        Economic
    </string>

    <string name="luxurysub">
        High-end, indulgent experiences.
    </string>
    <string name="luxury">
        Luxury
    </string>

    <string name="flexiblesub">
        No budget restrictions.
    </string>
    <string name="flexible">
        Flexible
    </string>
    <string name="destination">Destination</string>
    <string name="dates">Dates</string>
    <string name="jantojan">January 21 to January 22, 2025</string>
    <string name="budget">Budget</string>
    <string name="nature_escapes">Nature Escapes</string>
    <string name="location_permission">Location Permission</string>
    <string name="what_is_your_location">What Is Your Location</string>
    <string name="loc_desc">We need to know your location in order to suggest nearby services</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus

    </string>
    <string name="app_language">App Language</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="travel_preferences">Travel Preferences</string>

</resources>