<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlanTripFragment3">

    <TextView
        android:id="@+id/budgetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_trip_budget"
        android:textAppearance="@style/press_start"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"/>

    <TextView
        android:id="@+id/setBudgetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/know_preference"
        android:textAppearance="@style/getstartedwithplan"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.53sp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/budgetTV"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"/>

    <!--    Cheap-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cheapbtn"
        android:layout_width="343dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setBudgetTV"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cheap_ic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="243dp"
                    android:layout_height="20dp"
                    android:text="@string/cheap"
                    android:textAppearance="@style/budgettitle"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.53sp"
                    android:gravity="top" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheapsub"
                    android:textAppearance="@style/budgetsubstring"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.74sp"
                    android:gravity="top"
                    />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--    Economic-->
    <androidx.cardview.widget.CardView
        android:id="@+id/economicbtn"
        android:layout_width="343dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cheapbtn"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/economic_ic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="243dp"
                    android:layout_height="20dp"
                    android:text="@string/economic"
                    android:textAppearance="@style/budgettitle"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.53sp"
                    android:gravity="top" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/economicsub"
                    android:textAppearance="@style/budgetsubstring"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.74sp"
                    android:gravity="top" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--    Luxury-->
    <androidx.cardview.widget.CardView
        android:id="@+id/luxurybtn"
        android:layout_width="343dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/economicbtn"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/luxary_ic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="243dp"
                    android:layout_height="20dp"
                    android:text="@string/luxury"
                    android:textAppearance="@style/budgettitle"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.53sp"
                    android:gravity="top" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luxurysub"
                    android:textAppearance="@style/budgetsubstring"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.74sp"
                    android:gravity="top" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--    Flexible-->
    <androidx.cardview.widget.CardView
        android:id="@+id/flexible"
        android:layout_width="343dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/luxurybtn"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/flexible_ic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="243dp"
                    android:layout_height="20dp"
                    android:text="@string/flexible"
                    android:textAppearance="@style/budgettitle"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.53sp"
                    android:gravity="top" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flexiblesub"
                    android:textAppearance="@style/budgetsubstring"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.74sp"
                    android:gravity="top" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:id="@+id/nextbtn"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:background="@drawable/grey_btn_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textAppearance="@style/welcome_to_"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>