<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProfileActivity">



    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info_title"
        android:textAppearance="@style/personal_info_title"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Full Name -->
    <TextView
        android:id="@+id/fullNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/full_name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:background="@drawable/buttons_bg"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/fullNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Email -->
    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/title_email"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nameET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:drawableStart="@drawable/email_ic"
        android:layout_height="wrap_content"
        android:hint="@string/title_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/buttons_bg"
        android:drawablePadding="10dp"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Country -->
    <TextView
        android:id="@+id/countryTV"
        android:layout_marginStart="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/countryET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textCapWords"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/location_ic"
        android:background="@drawable/buttons_bg"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/countryTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Phone -->
    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/countryET"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/buttons_bg"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/phoneTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flagIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_flag_india"
            android:layout_gravity="center_vertical"
            android:contentDescription="Flag" />

        <TextView
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+91"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="00000 00000"
            android:inputType="phone"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:background="@android:color/transparent"
            android:maxLength="10" />
    </LinearLayout>


    <!-- Gender -->
    <TextView
        android:id="@+id/genderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginStart="25dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/phoneInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="12dp"
        android:background="@drawable/buttons_bg"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/genderTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bio -->
    <TextView
        android:id="@+id/bioTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:layout_marginStart="25dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/genderSpinner"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/bioET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/buttons_bg"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/bioTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Update Button -->
    <FrameLayout
        android:id="@+id/updateProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/blue_btn_bg"
        app:layout_constraintTop_toBottomOf="@id/bioET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAppearance="@style/text_button_login"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
